--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 2em;
+    font-family: "Inter", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+   
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "inter", monospace;
+}
+
+.circle-packing-label {
+    font-weight: bold !important;
+    fill: white !important; /* In SVG, the color of the text is controlled by the fill property */
+}
+
+svg .nivo_circle_packing_text {
+    fill: white !important;
+    font-weight: bold !important;
 }
