--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,27 @@
+/* index.css */
 body {
-    margin: 2em;
+    margin: 0;
+    padding: 0;
+
     font-family: "Inter", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    
-   
+    width: 100vw;
+    height: 100vh;
+}
+
+iframe {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    border: none;
+    z-index: -10 !important;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "inter", monospace;
 }
-
-
